force-app/main/default/objects/Approval_Log__c/Approval_Log__c.object-meta.xml
<CustomObject>
    <label>Approval Log</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Approval Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>