force-app/main/default/objects/Approval_Log__c/fields/Approval_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Approval_Field_Values__c</fullName>
    <label>Approval Field Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>