force-app/main/default/objects/Approval_Log__c/fields/Approval_Rule__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Rule</label>
    <referenceTo>sbaa__ApprovalRule__c</referenceTo>
    <relationshipLabel>Approval Logs</relationshipLabel>
    <relationshipName>Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>