force-app/main/default/objects/Approval_Log__c/fields/Submit_Count__c.field-meta.xml
<CustomField>
    <fullName>Submit_Count__c</fullName>
    <label>Submit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>